--- a/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
@@ -6,14 +6,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.SyllabificationComparisonController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.SyllabificationComparisonController">
 	<children>
-		<WebView fx:id="browser" layoutX="1.0" layoutY="6.0" prefHeight="482.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
+      <Pane prefHeight="111.0" prefWidth="637.0">
+         <children>
+            <CheckBox fx:id="useCVApproach" layoutX="37.0" layoutY="13.0" mnemonicParsing="false" text="%label.usecvapproach" />
+            <CheckBox fx:id="useSHApproach" layoutX="37.0" layoutY="42.0" mnemonicParsing="false" text="%label.useshapproach" />
+            <CheckBox fx:id="useONCApproach" layoutX="37.0" layoutY="72.0" mnemonicParsing="false" text="%label.useoncapproach" />
+            <CheckBox fx:id="useMoraicApproach" disable="true" layoutX="332.0" layoutY="13.0" mnemonicParsing="false" text="%label.usemoraicapproach" />
+            <CheckBox fx:id="useNuclearProjectionApproach" disable="true" layoutX="332.0" layoutY="42.0" mnemonicParsing="false" text="%label.usenpapproach" />
+            <CheckBox fx:id="useOTApproach" disable="true" layoutX="332.0" layoutY="72.0" mnemonicParsing="false" text="%label.useotapproach" />
+         </children>
+      </Pane>
+		<WebView fx:id="browser" layoutX="1.0" layoutY="120.0" prefHeight="435.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
 		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="13.0">
 			<buttons>
+				<Button fx:id="compareButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" text="%label.compare" />
 				<Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
 				<Button mnemonicParsing="false" onAction="#handleHelp" text="%label.help" />
 			</buttons>
