--- a/src/org/sil/syllableparser/view/fxml/Templates.fxml
+++ b/src/org/sil/syllableparser/view/fxml/Templates.fxml
@@ -31,6 +31,7 @@
 <!--                         </graphic> -->
 <!--                       </TableColumn> -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
+                      <TableColumn fx:id="typeColumn" prefWidth="63.0" text="%label.templatetype" />
                       <TableColumn fx:id="representationColumn" prefWidth="119.0" text="%label.templaterepresentation" />
                       <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
                     </columns>
@@ -59,14 +60,16 @@
                      <children>
                         <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
-                        <Label text="%label.templaterepresentation" GridPane.rowIndex="2" />
-                        <Label text="%label.active" GridPane.rowIndex="3" />
+                        <Label text="%label.templatetype" GridPane.rowIndex="2" />
+                        <Label text="%label.templaterepresentation" GridPane.rowIndex="3" />
+                        <Label text="%label.active" GridPane.rowIndex="4" />
                         <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
-                        <TextField fx:id="representationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES" />
-                        <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="5" promptText="Choose class" />
+                        <ComboBox fx:id="typeComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="Choose type" />
+                        <TextField fx:id="representationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" GridPane.vgrow="SOMETIMES" />
+                        <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="6" promptText="Choose class" />
                      </children>
                   </GridPane>
                </children>
