Add ability to move to previous or next item in a table Refactor handleInsertNewItem() and handleRemoveItem() Move position of comment field in word displays to after the word Add a colun for comment in word displays

--- a/src/org/sil/syllableparser/view/fxml/ONCWords.fxml
+++ b/src/org/sil/syllableparser/view/fxml/ONCWords.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Copyright (c) 2019 SIL International 
+<!-- Copyright (c) 2019-2020 SIL International 
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
 
@@ -25,6 +25,7 @@
                   <TableView fx:id="oncWordsTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="wordColumn" prefWidth="63.0" text="%label.word" />
+                      <TableColumn fx:id="commentColumn" prefWidth="63.0" text="%label.comment" />
                       <TableColumn fx:id="predictedSyllabificationColumn" prefWidth="119.0" text="%label.predictedsyllabification" />
                       <TableColumn fx:id="correctSyllabificationColumn" prefWidth="120.0" text="%label.correctsyllabification" />
                       <TableColumn fx:id="parserResultColumn" editable="false" prefWidth="-1.0" text="%label.parserresult" />
@@ -52,16 +53,16 @@
                     </rowConstraints>
                      <children>
                         <Label text="%label.word" />
-                        <Label text="%label.predictedsyllabification" GridPane.rowIndex="1" />
-                        <Label text="%label.correctsyllabification" GridPane.rowIndex="2" />
-                        <Label text="%label.parserresult" GridPane.rowIndex="3" />
-                        <Label text="%label.comment" GridPane.rowIndex="4" />
+                        <Label text="%label.comment" GridPane.rowIndex="1" />
+                        <Label text="%label.predictedsyllabification" GridPane.rowIndex="2" />
+                        <Label text="%label.correctsyllabification" GridPane.rowIndex="3" />
+                        <Label text="%label.parserresult" GridPane.rowIndex="4" />
                         <Label text="%label.parsertree" GridPane.rowIndex="5" />
                         <TextField fx:id="wordField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
-                        <TextField fx:id="predictedSyllabificationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="correctSyllabificationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="parserResultField" editable="true" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <TextField fx:id="commentField" GridPane.columnIndex="1" GridPane.rowIndex="4" editable="true" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
+                        <TextField fx:id="commentField" GridPane.columnIndex="1" GridPane.rowIndex="1" editable="true" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
+                        <TextField fx:id="predictedSyllabificationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="correctSyllabificationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="parserResultField" editable="true" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                         <AnchorPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
                            <children>
                               <WebView fx:id="parserLingTreeSVG" prefHeight="400.0" prefWidth="1000.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
