--- a/src/org/sil/syllableparser/view/fxml/ONCWords.fxml
+++ b/src/org/sil/syllableparser/view/fxml/ONCWords.fxml
@@ -18,7 +18,7 @@
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.ONCWordsController">
    <children>
-      <SplitPane dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0">
+      <SplitPane dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0" fx:id="splitPane">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -28,7 +28,7 @@
                       <TableColumn fx:id="commentColumn" prefWidth="63.0" text="%label.comment" />
                       <TableColumn fx:id="predictedSyllabificationColumn" prefWidth="119.0" text="%label.predictedsyllabification" />
                       <TableColumn fx:id="correctSyllabificationColumn" prefWidth="120.0" text="%label.correctsyllabification" />
-                      <TableColumn fx:id="parserResultColumn" editable="false" prefWidth="-1.0" text="%label.parserresult" />
+                      <TableColumn fx:id="parserResultColumn" editable="false" prefWidth="63.0" text="%label.parserresult" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
