--- a/src/org/sil/syllableparser/view/fxml/CVSyllablePatterns.fxml
+++ b/src/org/sil/syllableparser/view/fxml/CVSyllablePatterns.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2016 SIL International 
+<!-- Copyright (c) 2016-2020 SIL International
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
     
@@ -12,24 +12,16 @@
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.CVSyllablePatternsController">
    <children>
-      <SplitPane dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
+      <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <TableView fx:id="cvSyllablePatternTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-<!--                       <TableColumn fx:id="checkBoxColumn" prefWidth="4.0"> -->
-<!--                         <graphic> -->
-<!--                           <CheckBox fx:id="checkBoxColumnHead" mnemonicParsing="false" onAction="#handleCheckBoxColumnHead" prefHeight="17.0" prefWidth="4.0" selected="true" /> -->
-<!--                         </graphic> -->
-<!--                       </TableColumn>  -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
                       <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.naturalclasses" />
-                        <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
+                        <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
                   </TableView>
                </children>
             </AnchorPane>
