--- a/src/org/sil/syllableparser/view/fxml/Filters.fxml
+++ b/src/org/sil/syllableparser/view/fxml/Filters.fxml
@@ -22,7 +22,7 @@
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.FiltersController">
    <children>
-      <SplitPane dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0">
+      <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -36,11 +36,8 @@
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
                       <TableColumn fx:id="typeColumn" prefWidth="63.0" text="%label.filtertype" />
                       <TableColumn fx:id="representationColumn" prefWidth="119.0" text="%label.filterrepresentation" />
-                      <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
+                      <TableColumn fx:id="descriptionColumn" prefWidth="63" text="%label.description" />
                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
                   </TableView>
                </children>
             </AnchorPane>
