--- a/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
@@ -12,7 +12,7 @@
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.SHSonorityHierarchyController">
    <children>
-      <SplitPane dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
+      <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -25,7 +25,7 @@
 <!--                       </TableColumn>  -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
                       <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.segments" />
-                        <TableColumn fx:id="descriptionColumn" prefWidth="-1.0" text="%label.description" />
+                        <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
