--- a/src/org/sil/syllableparser/view/fxml/MoraicWordsPredictedVsCorrect.fxml
+++ b/src/org/sil/syllableparser/view/fxml/MoraicWordsPredictedVsCorrect.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2020 SIL International 
+<!-- Copyright (c) 2020-2021 SIL International 
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
     
@@ -13,7 +13,7 @@
    <children>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="600.0">
                <children>
-                  <TableView fx:id="muWordsPredictedVsCorrectTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="moraicWordsPredictedVsCorrectTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="wordPredictedVsCorrectColumn" prefWidth="500.0" text="%label.wordpredictedvscorrect" />
                     </columns>
